--- a/style.css
+++ b/style.css
@@ -1,10 +1,121 @@
+/* SET UP SCSS and split up */
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
 
-form {
+:root {
+  --main-font: "Titillium", sans-serif; /* temp */
+}
+
+::placeholder {
+  color: #323232;
+  font-weight: 400;
+}
+
+html, body {
+  font-family: var(--main-font);
+  font-size: 16px;
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  background: #e7322b;
+}
+
+header, footer {
+  padding: 2rem;
+  border: 1px dashed #323232;
+}
+
+section {
   display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  padding: 3rem 0;
+  position: relative;
+}
+
+.container {
+  position: relative;
+  max-width: 1440px;
   width: 100%;
 }
+
+.content-wrapper {
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.block__search-banner {
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+form {
+  display: flex;
+  flex: 0 1 100%;
+  align-items: flex-end;
+}
+
+form input, form textarea, form select {
+  appearance: none;
+  padding: 0.5rem;
+  background: transparent;
+  outline: none;
+  box-shadow: none;
+  border: none;
+  border-bottom: 2px solid #323232;
+  opacity: 1;
+}
+
+form input {
+  flex: 0 1 60%;
+  margin-right: 1rem;
+  font-family: var(--main-font);
+  color: #323232;
+  font-size: 1rem;
+}
+
+form label {
+  font-weight: 300;
+  font-size: 1.15rem;
+  font-family: var(--main-font);
+}
+
+form select {
+  width: 100%;
+  margin: 0 0.5rem;
+}
+
+form select option {
+  font-family: var(--main-font);
+  font-weight: 400;
+}
+
+form button.button-submit {
+  appearance: none;
+  background: transparent;
+  box-shadow: none;
+  outline: none;
+  border: none;
+  border: 2px solid #323232;
+  border-radius: 0 8px;
+  padding: 1rem;
+}
+
+.block__search-dropdown {
+  flex: 0 1 25%;
+  margin-right: 1rem;
+}
+
+/* do second container in css grid */
