--- a/docs/style.css
+++ b/docs/style.css
@@ -23,7 +23,14 @@ html, body {
   width: 100%;
   padding: 0;
   margin: 0;
-  background: #e7322b;
+  background: #de171792;
+}
+
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2.5rem;
 }
 
 header, footer {
