--- a/docs/style.css
+++ b/docs/style.css
@@ -27,7 +27,7 @@ html, body {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 3.15rem;
 }
 h2 {
   font-size: 2.5rem;
@@ -87,15 +87,15 @@ form input, form textarea, form select {
 
 form input {
   flex: 0 1 60%;
-  margin-right: 1rem;
+  margin: 0 0.5rem;
   font-family: var(--main-font);
   color: #323232;
   font-size: 1rem;
 }
 
 form label {
-  font-weight: 300;
-  font-size: 1.15rem;
+  font-weight: 400;
+  font-size: 1.25rem;
   font-family: var(--main-font);
 }
 
@@ -119,6 +119,7 @@ form button.button-submit {
   border-radius: 0 8px;
   padding: 1rem;
   transition: 0.25s ease-out;
+  font-size: 1rem;
 }
 
 form button.button-submit:hover {
