--- a/docs/style.css
+++ b/docs/style.css
@@ -1,4 +1,4 @@
-/* SET UP SCSS and split up */
+/* note to self: set up SCSS and split into partials */
 
 *,
 *::before,
@@ -32,16 +32,23 @@ img, video {
   height: auto;
 }
 
+/* TYPOGRAPHY */
+
 h1 {
   font-size: 3.15rem;
 }
 h2 {
   font-size: 2.5rem;
 }
+h3 {
+  font-size: 2rem;
+}
 
 ul, ol, li {
   list-style: none;
 }
+
+/* HEADER || FOOTER */
 
 header, footer {
   padding: 1rem 0;
@@ -56,42 +63,45 @@ header .content-wrapper {
   justify-content: space-between;
 }
 
-nav {
-  display: flex;
-  flex: 0 1 100%;
-  justify-content: flex-start;
-}
-
-nav .nav-list {
-  display: flex;
-  flex: 0 1 50%;
-}
-
-nav .nav-list li {
-  white-space: nowrap;
-  margin: 0 1rem;
-}
-
-nav .nav-list li span.date-ref {
-  font-weight: 600;
-}
-
-nav .nav-list li a {
-  text-decoration: none;
-  outline: none;
-  color: var(--main-text-color);
-}
-
-nav .nav-list li a:hover {
-  font-weight: 500;
-  border-bottom: 2px solid var(--blue-accent);
-  padding-bottom: 0.15rem;
-}
-
-.header-logo {
+header .header-logo {
   flex: 0 1 20%;
   max-width: 240px;
 }
+
+  * navigation *
+  nav {
+    display: flex;
+    flex: 0 1 100%;
+    justify-content: flex-start;
+  }
+
+  nav .nav-list {
+    display: flex;
+    flex: 0 1 50%;
+  }
+
+  nav .nav-list li {
+    white-space: nowrap;
+    margin: 0 1rem;
+  }
+
+  nav .nav-list li span.date-ref {
+    font-weight: 600;
+  }
+
+  nav .nav-list li a {
+    text-decoration: none;
+    outline: none;
+    color: var(--main-text-color);
+  }
+
+  nav .nav-list li a:hover {
+    font-weight: 500;
+    border-bottom: 2px solid var(--blue-accent);
+    padding-bottom: 0.15rem;
+  }
+
+/* STRUCTURE */
 
 section {
   display: flex;
@@ -118,12 +128,7 @@ section {
   align-items: center;
 }
 
-.block__search-banner {
-  width: 95%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
+/* FORM */
 
 form {
   display: flex;
@@ -186,12 +191,20 @@ form button.button-submit:hover {
   transition: 0.25s ease-in;
 }
 
+/* BLOCKS */
+
+.block__search-banner {
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .block__search-dropdown {
   flex: 0 1 25%;
   margin-right: 1rem;
 }
 
-/* do second container in css grid? */
 .block__search-results {
  display: grid;
  width: 100%;
