--- a/docs/style.css
+++ b/docs/style.css
@@ -44,10 +44,6 @@ h3 {
   font-size: 2rem;
 }
 
-ul, ol, li {
-  list-style: none;
-}
-
 a {
   text-decoration: none;
   outline: none;
@@ -87,7 +83,7 @@ header .header-logo {
   max-width: 240px;
 }
 
-  * navigation *
+/* navigation */
   nav {
     display: flex;
     flex: 0 1 100%;
@@ -97,6 +93,9 @@ header .header-logo {
   nav .nav-list {
     display: flex;
     flex: 0 1 50%;
+    list-style: none;
+    padding: 0;
+    margin: 0;
   }
 
   nav .nav-list li {
@@ -208,36 +207,43 @@ form button.button-submit:hover {
   justify-content: center;
 }
 
+.block__search-headline {
+  text-align: center;
+}
+
 .block__search-dropdown {
   flex: 0 1 25%;
   margin-right: 1rem;
 }
 
-
 /** results **/
 .block__search-results {
   display: grid;
   width: 100%;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+  grid-gap: 1rem;
 }
 
-.block__search-results ul {
-  max-width: 50%; /* temp */
+.block__search-results--list ul {
+  width: 100%;
 }
 
-.block__search-results ul li {
-  display: inline-block;
-  max-width: 100%;
-  word-break: break-all;
-}
-
-.block__search-results ul li,
-.block__search-results ul li a {
+.block__search-results--list ul li,
+.block__search-results--list ul li a {
   font-size: 1.15rem;
   font-weight: 500;
   line-height: 1.5;
 }
 
-.block__search-results ul li a {
+.block__search-results--list ul li a {
+  display: inline-block;
+  max-width: 100%;
+  word-break: break-all;
   text-decoration: none;
   color: var(--main-text-color);
+}
+
+.block__search-results--assets img {
+  display: none; /* temp */
 }
